2007-03-18 Chris Morley

	windows-vc2005: Simplified projects to OpenBabelDLL with driver
	programs for commandline, GUI, and Python interface.

	* include/openbabel/forcefield.h: So that the Python build
	in Windows will work, added a dummy function so that the 
	compiler will really make some functions of the templated class
	OBIter<OBForceField> which SWIG is expecting. The needs to be
	done properly, but needed to get it working for the 2.1 release. 
	
	* include/openbabel/obconversion.h and src/obconversion.cpp:
	added the patches supplied by Jerome Pansanel for providing a
	list of available formats.
	
2007-03-20 Chris Morley

	* src/formats/xml/cmlformat.cpp: Add code to write W and H in
	bondstereo. Ensure <bondStereo> is written in array form.
	
	Mods inDoAtoms to read the right set of atom coordinates.
	
	Add option to write bonds as aromatic.
	
2007-03-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obconversion.cpp: Amend yesterday's change to address double
	free() bug, PR#1683541. Still don't like this, as it could leak
	the zip_istream we create.

	* src/parsmart.cpp: Fix PR#1683890 for SMARTS pattern 'x' with no
	number. Default is "at least one ring bond."

	* test/files/smartstest.txt, test/files/smartsresults.txt: Update
	for above. 'x' pattern and 'x0' pattern.

2007-03-19  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/mol.cpp: OBMol::DeleteAtom - Moved DeleteAtom to *after* the
	EndModify call.  At this point the atom is already removed from the _vatom
	vector.  OBMol::DeleteBond - Moved DeleteBond to *after* the EndModify
	call.  At this point the bond is already removed from the _vbond vector.

2007-03-18 Chris Morley

	* src/formats/mdlformat.cpp: Added support for atom aliases when
	reading. It's not much described in the main MDL specification,
	so this implementation is just adequate to handle the InChI
	samples, where for some reason, this antiquated feature is
	used in several molecules.
	